force-app/main/default/objects/Asset/fields/DSALES_Categoria__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Categoria__c</fullName>
    <label>Categoría</label>
    <length>255</length>
    <type>Text</type>
</CustomField>