force-app/main/default/objects/Asset/fields/DSALES_CategoriaBuscar__c.field-meta.xml
<CustomField>
    <fullName>DSALES_CategoriaBuscar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Categoría</label>
    <referenceTo>DSALES_Categoria__c</referenceTo>
    <relationshipLabel>Productos Adquiridos</relationshipLabel>
    <relationshipName>Productos_Adquiridos</relationshipName>
    <type>Lookup</type>
</CustomField>