force-app/main/default/objects/Asset/fields/DSALES_Certificado__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Certificado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certificado</label>
    <referenceTo>DSALES_Certificado__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>