force-app/main/default/objects/Asset/fields/DSALES_Clase__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Clase__c</fullName>
    <label>Clase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>