force-app/main/default/objects/Asset/fields/DSALES_ClaseBuscar__c.field-meta.xml
<CustomField>
    <fullName>DSALES_ClaseBuscar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clase</label>
    <referenceTo>DSALES_Clase__c</referenceTo>
    <relationshipLabel>Productos Adquiridos</relationshipLabel>
    <relationshipName>Productos_Adquiridos</relationshipName>
    <type>Lookup</type>
</CustomField>