force-app/main/default/objects/Asset/fields/DSALES_Division__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Division__c</fullName>
    <description>Indica las tiendas por división</description>
    <inlineHelpText>Indica las tiendas por división</inlineHelpText>
    <label>División</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DSALES_Division</valueSetName>
    </valueSet>
</CustomField>