force-app/main/default/objects/Asset/fields/DSALES_DuracionDeGEX__c.field-meta.xml
<CustomField>
    <fullName>DSALES_DuracionDeGEX__c</fullName>
    <label>Duración de Garantia Extendida</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>