force-app/main/default/objects/Asset/fields/DSALES_DuracionGEX__c.field-meta.xml
<CustomField>
    <fullName>DSALES_DuracionGEX__c</fullName>
    <description>Indica el numero de meses de la vigencia de la Garantía Extendida</description>
    <inlineHelpText>Indica el numero de meses de la vigencia de la Garantía Extendida</inlineHelpText>
    <label>Duración Garantía Extendida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
                <default>true</default>
                <label>12</label>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>