force-app/main/default/objects/Asset/fields/DSALES_FamiliaBuscar__c.field-meta.xml
<CustomField>
    <fullName>DSALES_FamiliaBuscar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Familia</label>
    <referenceTo>DSALES_Familia__c</referenceTo>
    <relationshipLabel>Productos Adquiridos</relationshipLabel>
    <relationshipName>Productos_Adquiridos</relationshipName>
    <type>Lookup</type>
</CustomField>