force-app/main/default/objects/Asset/fields/DSales_Marca__c.field-meta.xml
<CustomField>
    <fullName>DSales_Marca__c</fullName>
    <label>Marca</label>
    <length>50</length>
    <type>Text</type>
</CustomField>