force-app/main/default/objects/Asset/fields/DSales_Modelo__c.field-meta.xml
<CustomField>
    <fullName>DSales_Modelo__c</fullName>
    <label>Modelo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>