force-app/main/default/objects/Asset/fields/DSALES_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Productos Adquiridos</relationshipLabel>
    <relationshipName>Productos_Adquiridos</relationshipName>
    <type>Lookup</type>
</CustomField>