force-app/main/default/objects/Asset/fields/DSALES_Precio_con_descuento_sin_IVA__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Precio_con_descuento_sin_IVA__c</fullName>
    <description>Indica el precio del producto tangible (original con descuento sin IVA)</description>
    <inlineHelpText>Indica el precio del producto tangible (original con descuento sin IVA)</inlineHelpText>
    <label>Precio con descuento sin IVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>