force-app/main/default/objects/Asset/fields/DSALES_PrecioSINIVA__c.field-meta.xml
<CustomField>
    <fullName>DSALES_PrecioSINIVA__c</fullName>
    <description>Indica el precio del producto tangible (original sin descuento sin IVA)</description>
    <inlineHelpText>Indica el precio del producto tangible (original sin descuento sin IVA)</inlineHelpText>
    <label>Precio sin  IVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>