force-app/main/default/objects/Asset/fields/DSALES_RegionList__c.field-meta.xml
<CustomField>
    <fullName>DSALES_RegionList__c</fullName>
    <description>Región de la tienda de donde se registro el producto adquirido</description>
    <label>Región</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DSALES_Region</valueSetName>
    </valueSet>
</CustomField>