force-app/main/default/objects/Asset/fields/DSALES_Servicio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Servicio__c</fullName>
    <label>Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instalación</fullName>
            </value>
            <value>
                <fullName>Garantía Extendida</fullName>
            </value>
            <value>
                <fullName>Armando</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>