force-app/main/default/objects/Asset/fields/DSALES_SubCategoriaBuscar__c.field-meta.xml
<CustomField>
    <fullName>DSALES_SubCategoriaBuscar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Categoría</label>
    <referenceTo>DSALES_SubCategoria__c</referenceTo>
    <relationshipLabel>Productos Adquiridos</relationshipLabel>
    <relationshipName>Productos_Adquiridos</relationshipName>
    <type>Lookup</type>
</CustomField>