force-app/main/default/objects/Asset/fields/DSALES_TipoSeguro__c.field-meta.xml
<CustomField>
    <fullName>DSALES_TipoSeguro__c</fullName>
    <description>Indica  los diferentes tipos de seguros</description>
    <inlineHelpText>Indica  los diferentes tipos de seguros</inlineHelpText>
    <label>Tipo de Seguro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DSALES_TipoSeguro</valueSetName>
    </valueSet>
</CustomField>