force-app/main/default/objects/Asset/fields/DSALES_TipoServicio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_TipoServicio__c</fullName>
    <description>Muestra los diferentes tipos de servicio</description>
    <inlineHelpText>Indica los diferentes tipos de servicio.</inlineHelpText>
    <label>Tipo de Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DSALES_TipoServicio</valueSetName>
    </valueSet>
</CustomField>