force-app/main/default/objects/Asset/fields/DSALES_Vigencia__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Vigencia__c</fullName>
    <formula>IF(ISPICKVAL(DSALES_TipoProducto__c, &quot;Servicio&quot;),IF(ISPICKVAL(DSALES_DuracionGEX__c, &quot;12&quot;),  PurchaseDate + 365 ,  PurchaseDate + 730),Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vigencia</label>
    <type>Date</type>
</CustomField>