force-app/main/default/objects/Asset/fields/DSALES_VigenciaMeses__c.field-meta.xml
<CustomField>
    <fullName>DSALES_VigenciaMeses__c</fullName>
    <label>Vigencia Meses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>