force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.PRICE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>Motocicleta</value>
    </filters>
    <label>Todos los productos adquiridos</label>
</ListView>