force-app/main/default/objects/Asset/listViews/DSALES_Misproductosadquridos.listView-meta.xml
<ListView>
    <fullName>DSALES_Misproductosadquridos</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.PRICE</columns>
    <columns>DSALES_Oportunidad__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mis productos adquiridos</label>
    <sharedTo>
        <role>DSALES_Admin_GEX</role>
        <role>DSALES_Agente_de_servicio_SM</role>
    </sharedTo>
</ListView>