force-app/main/default/objects/Asset/listViews/DSALES_Nuevosdeestasemana.listView-meta.xml
<ListView>
    <fullName>DSALES_Nuevosdeestasemana</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.PRICE</columns>
    <columns>DSALES_Oportunidad__c</columns>
    <filterScope>Everything</filterScope>
    <label>Nuevos de esta semana</label>
    <sharedTo>
        <role>DSALES_Admin_GEX</role>
        <role>DSALES_Admin_SM</role>
    </sharedTo>
</ListView>